--- a/lib/views/login.erb
+++ b/lib/views/login.erb
@@ -1,5 +1,7 @@
 <form action="/auth/login" method="post">
-  <p>Username: <input type="text" name="user[username]" /></p>
-  <p>Password: <input type="password" name="user[password]" /></p>
-  <input type="submit" value="Log In" />
+  <lable for="username">Username</lable>
+  <input type="text" id="username" name="user[username]" />
+  <lable for="password">Password</lable>
+  <input type="password" id="password" name="user[password]" />
+  <input type="button" id="submit" value="Log In" />
 </form>
