--- a/lib/views/login.erb
+++ b/lib/views/login.erb
@@ -1,7 +1,7 @@
 <form action="/auth/login" method="post">
   <label for="username">Username</label>
-  <input type="text" id="username" name="user[:username]" />
+  <input type="text" id="username" name="user[username]" />
   <label for="password">Password</label>
-  <input type="password" id="password" name="user[:password]" />
+  <input type="password" id="password" name="user[password]" />
   <input type="submit" id="submit" value="Submit" />
 </form>
